Payments-1: basic CRD API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=payments
+
+# H2 Database Configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:invoicedb
+
+# Credentials for the database.
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Driver and platform settings. Spring Boot auto-configures this, but it's good practice to specify.
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA and Hibernate configuration for DDL (Data Definition Language)
+# 'create-drop' creates the schema on startup and drops it on shutdown.
+# This is great for development, as it ensures a clean state every time.
+# Other options: 'create', 'update', 'none', 'validate'.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Show SQL queries in the console for debugging
+spring.jpa.show-sql=true
