Payments-7: Controller advice and custom exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=payments
+spring.jackson.property-naming-strategy=SNAKE_CASE
 
 # H2 Database Configuration
 spring.h2.console.enabled=true
